[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/icons/icon_goldbar.png" type="Texture" id=1]
[ext_resource path="res://assets/themes/UI.theme" type="Theme" id=2]
[ext_resource path="res://assets/ui/Hub/inventory_shopscreen.png" type="Texture" id=5]
[ext_resource path="res://ui/Hub/Hub_ShopUI.gd" type="Script" id=7]
[ext_resource path="res://assets/themes/western_pixel_6.tres" type="DynamicFont" id=8]



[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.305882, 0.262745, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.305882, 0.262745, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.4, 0.223529, 0.192157, 1 )

[node name="ShopUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 88.0
margin_right = -50.0
margin_bottom = -95.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_right = 534.0
margin_bottom = 177.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemListBackpack" type="ItemList" parent="Panel/TextureRect"]
margin_left = 294.101
margin_top = 12.1801
margin_right = 544.101
margin_bottom = 182.18
rect_min_size = Vector2( 222, 170 )
custom_styles/selected_focus = SubResource( 1 )
custom_styles/selected = SubResource( 2 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_constants/vseparation = 4
custom_constants/line_separation = 0
custom_constants/icon_margin = 0
custom_constants/hseparation = 5
auto_height = true
max_columns = 6
same_column_width = true
fixed_icon_size = Vector2( 32, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Panel"]
margin_left = 19.0
margin_top = 14.0
margin_right = 260.0
margin_bottom = 136.0
custom_styles/cursor = SubResource( 3 )
custom_styles/selected_focus = SubResource( 4 )
custom_styles/bg_focus = SubResource( 5 )
custom_styles/cursor_unfocused = SubResource( 6 )
custom_styles/selected = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
custom_fonts/font = ExtResource( 8 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel"]
margin_left = 19.0
margin_top = 139.0
margin_right = 134.0
margin_bottom = 171.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Panel/GridContainer"]
margin_right = 45.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "0.1/4.0"
valign = 1

[node name="TextureRect" type="TextureRect" parent="Panel/GridContainer"]
margin_left = 49.0
margin_right = 81.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="BuyButton" type="Button" parent="Panel"]
margin_left = 221.765
margin_top = 146.294
margin_right = 261.765
margin_bottom = 165.294
size_flags_horizontal = 3
disabled = true
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="Panel/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Panel/BuyButton" to="." method="_on_BuyButton_pressed"]
